# meterstick

./: .gitignore  README.md  __init__.py  comparisons.py  comparisons_test.py  confidence_interval_display.py  confidence_interval_display_demo.ipynb  confidence_interval_display_test.py  core.py  core_test.py  diversity.py  meterstick_custom_metrics.ipynb  meterstick_demo.ipynb  metrics.py  metrics_test.py  models.py  models_test.py  operations.py  operations_test.py  pdutils.py  pdutils_test.py  pyproject.toml  requirements.txt  setup.py  sql.py  sql_dialect.py  standard_errors.py  utils.py  utils_test.py
meterstick/: __init__.py  comparisons.py  comparisons_test.py  core.py  core_test.py  metrics.py  metrics_test.py  standard_errors.py
publications/a_grammar_of_data_analysis/: Baseball_Data_Analysis.ipynb  Meterstick_churn_rate.ipynb  Meterstick_example_implementations.ipynb  Meterstick_minimum_wage.ipynb  README.md
publications/a_grammar_of_data_analysis/datasets/: Baseball_Data_Preparation.ipynb  baseball_pitches_to_SEA_batters.csv  baseball_player_names.csv  churn_rate.csv  minimum_wage.csv
